--- a/HotelManagementReact-Kinalitos/src/components/Room/RoomCard.css
+++ b/HotelManagementReact-Kinalitos/src/components/Room/RoomCard.css
@@ -1,34 +1,64 @@
+.room-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .room-card {
-  border: none;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  width: 100% auto ;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   overflow: hidden;
 }
 
 .room-card-title {
   font-weight: bold;
-  color: #333;
+  margin-bottom: 10px;
 }
 
 .room-card-text {
-  color: #666;
-  font-size: 0.9rem;
+  margin-bottom: 10px;
 }
 
 .room-card-text-user {
+  font-size: 18px;
   font-weight: bold;
-  color: #333;
+  color: #337ab7;
+}
+
+.star {
+  margin-bottom: 20px;
+}
+
+.star i {
+  color: #ffd700;
+  margin-right: 5px;
 }
 
 .room-card-buttons {
-  margin-top: 1rem;
+  margin-top: 20px;
 }
 
 .room-card-button {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 10px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+}
+
+.room-card-button.bg-primary {
+  background-color: #337ab7;
+}
+
+.room-card-button.bg-secondary {
+  background-color: #666;
+}
+
+.room-card-button.bg-danger {
+  background-color: #dc3545;
 }
 
 .room-card-button:hover {
-  filter: brightness(0.9);
+  opacity: 0.8;
 }
