--- a/HotelManagementReact-Kinalitos/src/components/Room/RoomCard.css
+++ b/HotelManagementReact-Kinalitos/src/components/Room/RoomCard.css
@@ -2,14 +2,26 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 16px;
+  max-width: 100%;
+  overflow-x: auto;
 }
 
 .room-card {
-  margin: 20px;
-  width: 100% auto ;
+  flex: 0 1 32%; /* Ajusta el ancho de cada tarjeta */
+  box-sizing: border-box;
+  margin: 16px 0; /* Espacio vertical entre las tarjetas */
+  max-width: 32%; /* Asegura que cada tarjeta no exceda el tamaño deseado */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   overflow: hidden;
+}
+
+
+.room-card img {
+  width: 100%;
+  height: 200px; 
+  object-fit: cover;
 }
 
 .room-card-title {
@@ -41,22 +53,11 @@
 }
 
 .room-card-button {
+  background-color: #27c834;
   padding: 10px 20px;
   border: none;
   border-radius: 10px;
   cursor: pointer;
-}
-
-.room-card-button.bg-primary {
-  background-color: #337ab7;
-}
-
-.room-card-button.bg-secondary {
-  background-color: #666;
-}
-
-.room-card-button.bg-danger {
-  background-color: #dc3545;
 }
 
 .room-card-button:hover {
