--- a/HotelManagementReact-Kinalitos/src/pages/HomePage/HomePage.css
+++ b/HotelManagementReact-Kinalitos/src/pages/HomePage/HomePage.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -14,18 +14,34 @@
     padding: 0;
 }
 
+.rooms{
+    display: flex;
+    flex-direction: r;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.hotels{
+    display: flex;
+    flex-direction: r;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+
 #navbar {
     background: #5c9b82;
-    /* Cambio de color */
+     
 }
 
 #logo {
     font-size: 36px;
     font-weight: 550;
     color: #ffffff;
-    /* Cambio de color */
+
     text-shadow: 0px 1px 1px #5c9b82;
-    /* Cambio de color */
+
     margin-bottom: 5px;
 }
 
@@ -45,7 +61,7 @@
     font-size: 16px;
     font-weight: 550;
     color: #ffffff;
-    /* Cambio de color */
+
     letter-spacing: 1px;
     border-radius: 3px;
     transition: 0.5s ease;
@@ -54,13 +70,13 @@
 .nav-item .nav-link:hover {
     background: #1e3bb0;
     color: #ffffff;
-    /* Cambio de color */
+
 }
 
 #navbar form button {
     background: #ffa500;
     color: #ffffff;
-    /* Cambio de color */
+
     border: none;
 }
 
@@ -97,7 +113,7 @@
 .home {
     width: 100%;
     height: 90vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)), url(../../assets/background-img.png);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2)), url(https://www.cheekytrip.com/content/images/fodelecrete.gif)/* url(https://mbluxury1.s3.amazonaws.com/2024/03/01103937/luxury-hotel-content-marketing-gif.gif) */;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -109,20 +125,20 @@
 
 .home .content h5 {
     color: #ffffff;
-    /* Cambio de color */
+
     font-size: 38px;
     font-weight: 550;
     text-shadow: 0px 1px 1px #5c9b82;
-    /* Cambio de color */
+
 }
 
 .home .content h1 {
     color: #ffffff;
-    /* Cambio de color */
+
     font-size: 70px;
     font-weight: 550;
     text-shadow: 0px 1px 1px #5c9b82;
-    /* Cambio de color */
+
     margin-top: 5px;
 }
 
@@ -130,7 +146,7 @@
     content: ' ';
     color: #ffa500;
     text-shadow: 0px 1px 1px #5c9b82;
-    /* Cambio de color */
+
     animation: changetext 10s infinite linear;
 }
 
@@ -182,21 +198,19 @@
 
 .home .content p {
     color: #ffffff;
-    /* Cambio de color */
+
     font-size: 15px;
     font-weight: 600;
     text-shadow: 0px 1px 1px #5c9b82;
-    /* Cambio de color */
+
     margin-bottom: 30px;
     margin-top: 5px;
 }
 
 .home .content a {
     padding: 10px;
-    background: #ffffff;
-    /* Cambio de color */
-    color: #157951;
-    /* Cambio de color */
+    background: #ffffff;    color: #157951;
+
     letter-spacing: 2px;
     font-weight: 550;
     border-radius: 5px;
@@ -207,12 +221,9 @@
 .home .content a:hover {
     background: #27c834;
     color: #ffffff;
-    /* Cambio de color */
+
 }
 
-.card-body a: hover{
-    background: #27c834;
-}
 
 @media (max-width:850px) {
     .home {
@@ -243,14 +254,14 @@
 
 .book {
     background: #5c9b82;
-    /* Cambio de color */
+  
     padding: 50px;
 }
 
 .main-text h1 {
     text-align: center;
     text-shadow: #aeffe9;
-    /* Cambio de color */
+
     color: #ffffff;
 }
 
@@ -263,7 +274,7 @@
     margin-right: 50px;
     border-radius: 10px;
     box-shadow: 0px 5px 5px -6px #5c9b82;
-    /* Cambio de color */
+
 }
 
 .book .row {
@@ -275,13 +286,13 @@
 .book form input {
     padding: 10px;
     color: #5c9b82;
-    /* Cambio de color */
+
     border: none;
     outline: none;
     font-size: 15px;
     border-radius: 10px;
     box-shadow: 0px 5px 5px -6px #5c9b82;
-    /* Cambio de color */
+ 
 }
 
 .book form textarea {
@@ -289,7 +300,7 @@
     border-radius: 10px;
     resize: none;
     box-shadow: 0px 5px 5px -6px #5c9b82;
-    /* Cambio de color */
+
     height: 200px;
 }
 
@@ -299,7 +310,7 @@
     font-weight: 550;
     background: #1e3bb0;
     color: #ffffff;
-    /* Cambio de color */
+
     margin-top: 10px;
     transition: 0.5s;
 }
@@ -323,7 +334,7 @@
     margin-top: 30px;
     font-weight: 600;
     text-shadow: #ffffff;
-    /* Cambio de color */
+
     color: #ffffff;
 }
 
@@ -371,13 +382,13 @@
     text-decoration: none;
     background: #20b01e;
     color: white;
-    /* Cambio de color */
+
     border-radius: 5px;
 }
 
 .services {
     background: #5c9b82;
-    /* Cambio de color */
+
     margin-top: 50px;
 }
 
@@ -422,20 +433,31 @@
     transform: scale(1.1);
 }
 
-
 .about {
     padding: 50px;
     margin-top: 50px;
     background: #5c9b82;
-    /* Cambio de color */
+    color: #ffffff;
+}
+
+.about .main-txt h1 {
+    text-align: center;
+    font-weight: 600;
+    color: #ffffff;
+}
+
+.about .main-txt h1 span {
+    color: #1e3bb0;
 }
 
 .about .card {
     border-radius: 10px;
+    overflow: hidden;
 }
 
 .about .card img {
-    border-radius: 10px;
+    width: 100%;
+    height: auto;
 }
 
 .about h2 {
@@ -447,7 +469,9 @@
 .about p {
     font-weight: 500;
     color: #ffffff;
+    text-align: justify;
 }
+
 
 #about-btn {
     width: 150px;
@@ -456,7 +480,7 @@
     border-radius: 5px;
     background: #ffa500;
     color: #ffffff;
-    /* Cambio de color */
+
     letter-spacing: 2px;
     font-weight: 550;
     transition: 0.5s ease;
@@ -467,9 +491,17 @@
     width: 170px;
 }
 
-@media (max-width:765px) {
+@media (max-width: 765px) {
     .about {
-        padding: 0;
+        padding: 20px;
+    }
+
+    .about .main-txt h1 {
+        font-size: 24px;
+    }
+
+    .about .card img {
+        width: 100%;
     }
 }
 
@@ -478,17 +510,17 @@
     margin-top: 150px;
     text-align: center;
     background: #5c9b82;
-    /* Cambio de color */
+
 }
 
 #footer h1 {
     font-weight: 600;
     padding-top: 30px;
     text-shadow: #ffffff;
-    /* Cambio de color */
+
     color: #ffffff;
 }
 
 #footer h1 span {
     color: #1e3bb0;
-}
+} 
